--- a/.github/workflows/build-kernel_by_clang383902b.yml
+++ b/.github/workflows/build-kernel_by_clang383902b.yml
@@ -222,19 +222,33 @@ jobs:
        fi
   
     - name: Make Anykernel3
-      if: env.CHECK_FILE_IS_OK == 'true'
-      run: |
-        cd $GITHUB_WORKSPACE/kernel_workspace
-        git clone https://github.com/ch6vip/AnyKernel3
-        sed -i 's/do.devicecheck=1/do.devicecheck=0/g' AnyKernel3/anykernel.sh
-        sed -i 's!block=auto;!g' AnyKernel3/anykernel.sh
-        sed -i 's/is_slot_device=0;/is_slot_device=auto;/g' AnyKernel3/anykernel.sh
-        cp android-kernel/out/arch/${{ env.ARCH }}/boot/${{ env.KERNEL_IMAGE_NAME }} AnyKernel3/
-        if [ ${{ env.CHECK_DTBO_IS_OK }} = true ]; then
-            cp android-kernel/out/arch/${{ env.ARCH }}/boot/dtbo.img AnyKernel3/
-        fi
-        rm -rf AnyKernel3/.git* AnyKernel3/README.md
-
+if: env.CHECK_FILE_IS_OK == 'true'
+run: |
+  cd "$GITHUB_WORKSPACE/kernel_workspace"
+  
+  # Clone the AnyKernel3 个仓库
+  git clone https://github.com/ch6vip/AnyKernel3
+  
+  # Disable device check
+  sed -i 's/do.devicecheck=1/do.devicecheck=0/g' AnyKernel3/anykernel.sh
+  
+  # Clear block variable
+  sed -i 's!block=auto;!!g' AnyKernel3/anykernel.sh
+  
+  # Set slot device to auto
+  sed -i 's/is_slot_device=0;/is_slot_device=auto;/g' AnyKernel3/anykernel.sh
+  
+  # Copy the kernel image
+  cp "android-kernel/out/arch/${{ env.ARCH }}/boot/${{ env.KERNEL_IMAGE_NAME }}" AnyKernel3/
+  
+  # Copy dtbo.img if CHECK_DTBO_IS_OK is true
+  if [ "${{ env.CHECK_DTBO_IS_OK }}" = "true" ]; then
+    cp "android-kernel/out/arch/${{ env.ARCH }}/boot/dtbo.img" AnyKernel3/
+  fi
+  
+  # Remove unnecessary files
+  rm -rf AnyKernel3/.git* AnyKernel3/README.md
+  
     - name: Make boot image
       if: env.HAVE_SOURCE_BOOT_IMAGE == 'true' && env.CHECK_FILE_IS_OK == 'true'
       run: |
